# xash3d-fwgs

./: .gitignore  .gitmodules  CMakeLists.txt  MEMORY.md  patch.diff  wscript
.github/workflows/: c-cpp.yml
android/app/: build.gradle.kts
android/app/src/main/java/su/xash/engine/: XashActivity.java
android/app/src/main/java/su/xash/engine/model/: Game.kt  GameDataDownloader.kt
android/app/src/main/java/su/xash/engine/ui/settings/: AppSettingsPreferenceFragment.kt  GameSettingsPreferenceFragment.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: app_preferences.xml  game_preferences.xml
common/: defaults.h  xash3d_types.h
engine/: alias.h  menu_int.h  mobility_int.h  ref_api.h  wscript
engine/client/: cl_cmds.c  cl_efx.c  cl_main.c  cl_mobile.c  cl_parse.c  cl_particleman.c  cl_particleman.h  cl_scrn.c  cl_sprite.c  cl_view.c  client.h  console.c  ref_common.c  vid_common.c  vid_common.h
engine/client/dll_int/: cl_gameui.c  cl_gameui_next.c  cl_gameui_next.h  ref_common.c
engine/client/input/: in_touch.c
engine/client/parse/: cl_parse.c
engine/common/: cmd.c  common.h  cvar.c  filesystem_engine.c  host.c  launcher.c  mod_alias.c  mod_sprite.c  sys_con.c
engine/gameui/: stub_gameui.cpp  stub_gameui.h
engine/platform/ios/: launchdialog.m
engine/platform/ios/bundle/: Info.plist
engine/platform/posix/: crash_posix.c
engine/platform/sdl/: vid_sdl.c
engine/platform/sdl2/: host_sdl2.c  in_sdl2.c  sys_sdl2.c  vid_sdl2.c
engine/server/: sv_client.c  sv_game.c  sv_world.c
engine/vgui2/: BaseUI_Interface.cpp  vgui2_interface_xash3d.cpp
filesystem/: gameinfo.c
ios/: Info.plist
ios/Xash3D-iOS.xcodeproj/: project.pbxproj
ios/Xash3D-iOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/Xash3D-iOS.xcodeproj/xcshareddata/xcschemes/: Xash3D-iOS.xcscheme
ios/Xash3D-iOS/controller/: TutorViewController.mm
ios/Xash3D-iOS/model/: GameDataDownloader.h  GameDataDownloader.mm  GameLibDownloader.h  GameLibDownloader.mm  launchdialog.mm  launcherdialog.h
ios/Xash3D-iOS/view/: FileBrowserViewController.h  FileBrowserViewController.mm  LaunchScreenStoryboard.storyboard  TextEditorViewController.h  TextEditorViewController.mm  TutorStoryboard.storyboard
ios/libbacktrace_config/: backtrace-supported.h  config.h
pm_shared/: pm_defs.h
public/: ktx2.h
ref/gl/: gl_alias.c  gl_context.c  gl_local.h  gl_opengl.c  gl_rmain.c  gl_rsurf.c  gl_studio.c  gl_watershader.c  gl_watershader.h
ref/gl/glsl/: water_fp_aw.glsl  water_fp_uw.glsl  water_vp.glsl
ref/vk/: NOTES.md  TODO.md  camera.c  common_geometry.c  infotool.c  r_block.h  r_decals.c  r_decals.h  r_speeds.c  r_speeds.h  r_textures.c  rt_kusochki.c  rt_kusochki.h  sebastian.py  vk_beams.c  vk_brush.c  vk_common.h  vk_core.c  vk_core.h  vk_cvar.c  vk_framectl.c  vk_geometry.c  vk_geometry.h  vk_light.c  vk_light.h  vk_logs.c  vk_mapents.c  vk_materials.c  vk_overlay.c  vk_ray_accel.h  vk_ray_internal.h  vk_ray_model.c  vk_render.c  vk_render.h  vk_rmain.c  vk_rpart.c  vk_rtx.c  vk_rtx.h  vk_scene.c  vk_scene.h  (+10 more)
ref/vk/data/bshift/luchiki/maps/: ba_canal1.patch  ba_canal2.patch  ba_elevator.patch  ba_security1.patch  ba_tram2.patch  ba_yard5a.patch
ref/vk/data/bshift/maps/: ba_canal1.rad  ba_canal1b.rad  ba_elevator.rad  ba_hazard2.rad  ba_hazard3.rad  ba_hazard5.rad  ba_hazard6.rad  ba_power1.rad  ba_power2.rad  ba_teleport2.rad  ba_yard1.rad  ba_yard3.rad  ba_yard4.rad  ba_yard4a.rad  ba_yard5a.rad  lights.rad
ref/vk/data/valve/luchiki/maps/: c1a1f.patch  c1a3.patch  c1a3b.patch  c1a4d.patch  c1a4e.patch  c1a4f.patch  c1a4g.patch  c2a1.patch  c2a1b.patch  c2a2h.patch  c2a3.patch  c2a3a.patch  c2a3b.patch  c2a3d.patch  c2a3e.patch  c2a4a.patch  c2a4e.patch  c2a4f.patch  c2a4g.patch  c2a5.patch  c2a5c.patch  c2a5e.patch  c2a5f.patch  c3a1.patch  c3a1a.patch  c3a2.patch  c3a2d.patch  c3a2e.patch  c4a1a.patch  c5a1.patch  t0a0.patch
ref/vk/data/valve/maps/: boot_camp.rad  c0a0d.rad  c1a0d.rad  c1a1f.rad  c1a3.rad  c1a3a.rad  c1a4.rad  c1a4b.rad  c1a4d.rad  c1a4e.rad  c1a4f.rad  c1a4g.rad  c1a4i.rad  c1a4j.rad  c2a1.rad  c2a1a.rad  c2a1b.rad  c2a2.rad  c2a2a.rad  c2a2b1.rad  c2a2c.rad  c2a2d.rad  c2a2e.rad  c2a2f.rad  c2a2g.rad  c2a2h.rad  c2a3.rad  c2a3a.rad  c2a3b.rad  c2a3c.rad  c2a3d.rad  c2a3e.rad  c2a4a.rad  c2a4b.rad  c2a4c.rad  c2a4d.rad  c2a4e.rad  c2a4f.rad  c2a4g.rad  c2a5.rad  (+45 more)
ref/vk/shaders/: 2d.frag.spv  2d.vert.spv  bounce.comp  brdf.glsl  brush.frag.spv  brush.vert.spv  light_common.glsl  ray_interop.h  ray_primary.comp  sky.frag.spv  sky.vert.spv  trace_decals.glsl  trace_simple_blending.glsl
ref/vk/std/: arrays.c  arrays.h  flipping.c  flipping.h  profiler.h  stringview.c  stringview.h
ref/vk/tests/: unordered_roadmap.c
ref/vk/vulkan/: VBarrier.c  VBarrier.h  VBuffer.c  VBuffer.h  VCombuf.c  VCombuf.h  VCommandPool.c  VDescriptor.c  VDescriptor.h  VDevice.c  VDevice.h  VDevmem.c  VDevmem.h  VImage.c  VImage.h  VImageExtra.h  VMeatpipe.c  VMeatpipe.h  VMisc.c  VNvAftermath.c  VPass.c  VPass.h  VPerfQuery.c  VPerfQuery.h  VPipeline.c  VPipeline.h  VRayAccel.c  VResource.c  VResource.h  VStaging.c  VSwapchain.c  VSwapchain.h
scripts/: build-ninja.py  configure-ninja.py
scripts/gha/: build_ios.sh  build_win32.sh  deps_android.sh
scripts/ios/: build_and_package.sh  buildallmods.sh  buildcs16.sh  buildhlsdk.sh  createipa.sh  prepare_game_libs.sh
scripts/waifulib/: glslc.py
